feat: people update

--- a/src/app/people/list-people/list-people.component.html
+++ b/src/app/people/list-people/list-people.component.html
@@ -15,7 +15,7 @@
         <td> {{ people.name }}</td>
         <td> {{ people.age }}</td>
         <td class="text-center" style="width: 300px">
-          <a href="#" title="Editar" alt="Editar" class="btn btn-xs btn-info">
+          <a [routerLink]="['/people/update', people.id]" href="#" title="Editar" alt="Editar" class="btn btn-xs btn-info">
             <i class="fa fa-edit" aria-hidden="true"></i> Editar
           </a>
           <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
