--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,35 @@
 <div class="container">
-  <nav class="navbar navbar-default">
-    <div class="conteiner-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          {{title}}
-        </a>
-      </div>
-    </div>
-  </nav>
+  <ul
+    class="nav justify-content-end"
+    style="background-color: rgb(0, 115, 168)"
+  >
+    <li class="nav-item">
+      <a
+        class="nav-link active"
+        aria-current="page"
+        href="#"
+        style="color: white"
+        >{{ people }}</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link active"
+        aria-current="page"
+        href="/city"
+        style="color: white"
+        >{{ city }}</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link active"
+        aria-current="page"
+        href="/state"
+        style="color: white"
+        >{{ state }}</a
+      >
+    </li>
+  </ul>
   <router-outlet></router-outlet>
 </div>
-
