--- a/src/app/people/insert-people/insert-people.component.html
+++ b/src/app/people/insert-people/insert-people.component.html
@@ -3,24 +3,202 @@
   <form #formPeople="ngForm" (ngSubmit)="insert()">
     <div class="form-group">
       <label for="name">Nome:</label>
-      <input type="text" class="form-control" [(ngModel)]="people.name" #name="ngModel" id="name" name="nome" minlength="2" required>
-      <div *ngIf="name.errors && (name.dirty || name.touched)" class="alert alert-danger">
-        <div [hidden]="!name.errors?.required"> Digite o nome da pessoa. </div>
-        <div [hidden]="!name.errors?.minlength"> O nome deve conter ao menos 2 caracteres. </div>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="people.name"
+        #name="ngModel"
+        id="name"
+        name="nome"
+        minlength="2"
+        required
+      />
+      <div
+        *ngIf="name.errors && (name.dirty || name.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!name.errors?.required">Digite o nome da pessoa.</div>
+        <div [hidden]="!name.errors?.minlength">
+          O nome deve conter ao menos 2 caracteres.
+        </div>
       </div>
     </div>
-     <div class="form-group">
+    <div class="form-group">
       <label for="idade">Idade:</label>
-      <input type="text" class="form-control" [(ngModel)]="people.age" #age="ngModel" id="age" name="age" required>
-      <div *ngIf="age.errors && (age.dirty || age.touched)" class="alert alert-danger">
-        <div [hidden]="!age.errors?.required"> Digite a idade da pessoa. </div>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="people.age"
+        #age="ngModel"
+        id="age"
+        name="age"
+        required
+      />
+      <div
+        *ngIf="age.errors && (age.dirty || age.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!age.errors?.required">Digite a idade da pessoa.</div>
       </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!formPeople.form.valid">
+
+      <label for="birthDate">Data de Nasc.:</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="people.birthDate"
+        #birthDate="ngModel"
+        id="birthDate"
+        name="birthDate"
+        required
+      />
+      <div
+        *ngIf="birthDate.errors && (birthDate.dirty || birthDate.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!birthDate.errors?.required">
+          Digite a data de nascimento da pessoa.
+        </div>
+      </div>
+      <br />
+    </div>
+
+    <div class="form-group">
+      <h4>Endereço</h4>
+
+      <label for="idade">Rua:</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="address.road"
+        #road="ngModel"
+        id="road"
+        name="road"
+        required
+      />
+      <div
+        *ngIf="road.errors && (road.dirty || road.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!road.errors?.required">Digite o nome da rua</div>
+      </div>
+
+      <label for="bairro">Bairro:</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="address.district"
+        #district="ngModel"
+        id="district"
+        name="district"
+        required
+      />
+      <div
+        *ngIf="district.errors && (district.dirty || district.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!district.errors?.required">Digite o bairro</div>
+      </div>
+
+      <label for="numero">Número:</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="address.number"
+        #number="ngModel"
+        id="number"
+        name="number"
+        required
+      />
+      <div
+        *ngIf="number.errors && (number.dirty || number.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!number.errors?.required">Digite o número</div>
+      </div>
+
+      <label for="complemento">Complemento:</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="address.complement"
+        #complement="ngModel"
+        id="complement"
+        name="complement"
+      />
+      <div
+        *ngIf="complement.errors && (complement.dirty || complement.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!complement.errors?.required">Digite o complemento</div>
+      </div>
+
+      <label for="cep">CEP:</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="address.cep"
+        #cep="ngModel"
+        id="cep"
+        name="cep"
+      />
+      <div
+        *ngIf="cep.errors && (cep.dirty || cep.touched)"
+        class="alert alert-danger"
+      >
+        <div [hidden]="!cep.errors?.required">Digite o CEP</div>
+      </div>
+
+
+
+      <div class="row">
+        <div class="col-6">
+          <label for="cidade">Cidade:</label>
+          <input
+            type="text"
+            class="form-control"
+            [(ngModel)]="address.city"
+            #city="ngModel"
+            id="city"
+            name="city"
+          />
+          <div
+            *ngIf="city.errors && (city.dirty || city.touched)"
+            class="alert alert-danger"
+          >
+            <div [hidden]="!city.errors?.required">Digite a cidade</div>
+          </div>
+        </div>
+        <div class="col-6">
+          <label for="complemento">Estado:</label>
+          <input
+            type="text"
+            class="form-control"
+            [(ngModel)]="address.state"
+            #state="ngModel"
+            id="state"
+            name="state"
+          />
+          <div
+            *ngIf="state.errors && (state.dirty || state.touched)"
+            class="alert alert-danger"
+          ></div>
+
+          <div [hidden]="!state.errors?.required">Digite o Estado</div>
+        </div>
+      </div>
+
+      <br />
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!formPeople.form.valid"
+      >
         <i class="fa fa-save" aria-hidden="true"></i> Salvar
       </button>
       <a class="btn btn-secondary">
         <i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar
       </a>
+      <br /><br />
     </div>
   </form>
 </div>
