--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <a
         class="nav-link active"
         aria-current="page"
-        href="#"
+        href="/people"
         style="color: white"
         >{{ people }}</a
       >
