feat: add validors, pipe and mask

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <a
         class="nav-link active"
         aria-current="page"
-        href="/city"
+        href="/city/list"
         style="color: white"
         >{{ city }}</a
       >
