--- a/src/app/city/insert-city/insert-city.component.html
+++ b/src/app/city/insert-city/insert-city.component.html
@@ -26,7 +26,7 @@
     <div class="form-group">
       <label for="state">Estado:</label>
       <select class="form-select" [(ngModel)]="city.state">
-        <option *ngFor="let state of states" value="state">
+        <option *ngFor="let state of states" value="state.name">
           {{ state.name }}
         </option>
       </select>
